src/stylesheets/components/_dropdown.scss
.dropdown-toggle {
  &::after {
    border: none;
    content: "\ea4e";
    font-family: remixicon !important;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    line-height: 1;
    vertical-align: middle;
    font-size: $font-size-base;
    font-weight: $font-weight-bold;
    margin-left: 0.4rem;
    margin-right: -0.25rem;
  }
}

.dropup .dropdown-toggle {
  &::after {
    border: none;
    content: "\ea78";
    font-family: remixicon !important;
    font-style: normal;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    line-height: 1;
    vertical-align: middle;
    font-size: $font-size-base;
    font-weight: $font-weight-bold;
    margin-left: 0.4rem;
    margin-right: -0.25rem;
  }
}

.dropdown-menu {
  ul.list-unstyled {
    margin-bottom: 0;
  }
}

.dropdown-header {
  @extend .fs-base;
  font-weight: $font-weight-bold;
}

.dropdown {
  .dropdown-item .form-check-input,
  .dropdown-item .form-check-label {
    cursor: pointer;
  }

  .dropdown-item .form-check-label {
    display: block;
  }

  &-organization {
    min-width: 250px;

    .dropdown-toggle {
      &.btn-ico > span {
        flex-grow: 1;
        text-align: left;
        display: inline-block;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      &__summary {
        display: grid;
        grid-template-columns: auto 1fr auto;
        grid-template-rows: repeat(2, auto);
        grid-column-gap: map-get($spacers, 2);
        text-align: left;

        i {
          grid-area: 1 / 1 / 3 / 2;
          position: relative;
          width: 40px;
          height: 40px;
          background-color: $body-color;
          border-radius: $border-radius-lg;
          font-size: $h3-font-size;
          font-weight: $font-weight-medium;
          color: $white;

          &::before {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        span {
          grid-area: 1 / 2 / 2 / 3;
          font-size: $font-size-sm;
          line-height: $line-height-sm;
        }

        strong {
          grid-area: 2 / 2 / 3 / 3;
          line-height: $line-height-sm;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }

        &::after {
          grid-area: 1 / 3 / 3 / 4;
          content: "\f327";
          margin-left: 1rem;
          margin-right: 1rem;
          margin-top: 1rem;
        }
      }
    }

    .dropdown-item {
      @extend .py-3;

      &__summary {
        display: grid;
        grid-template-columns: auto 1fr;
        grid-template-rows: repeat(2, auto);
        grid-column-gap: map-get($spacers, 2);
        text-align: left;

        i {
          grid-area: 1 / 1 / 3 / 2;
          position: relative;
          width: 40px;
          height: 40px;
          background-color: $border-color;
          border-radius: $border-radius-lg;
          font-size: $h3-font-size;
          font-weight: $font-weight-medium;
          color: $nuance-05;

          &::before {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        span {
          grid-area: 1 / 2 / 2 / 3;
          font-size: $font-size-sm;
          line-height: $line-height-sm;
        }

        strong {
          grid-area: 2 / 2 / 3 / 3;
          line-height: $line-height-sm;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }
      }

      &.active {
        i {
          background-color: $button-light;
          color: $white;
        }
      }

      &.is-last-sticky {
        border-top: 1px solid $border-color;
        background-color: $white;
        position: sticky;
        bottom: 0;
        left: 0;
        color: $button;

        i {
          background-color: transparent;
          color: $button;
        }

        &:hover {
          color: $button-light;

          i {
            color: $button-light;
          }
        }

        .dropdown-menu & {
          margin-bottom: 75px;
        }
      }
    }

    @include media-breakpoint-up(lg) {
      .dropdown-toggle,
      .dropdown-menu {
        width: 100%;
      }
    }
  }

  &-login {
    .dropdown-toggle {
      &.btn-ico > span {
        flex-grow: 1;
        text-align: left;
        display: inline-block;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
      }

      &__summary {
        display: grid;
        grid-template-columns: auto 1fr auto;
        grid-template-rows: repeat(2, auto);
        grid-column-gap: map-get($spacers, 2);
        text-align: left;

        i {
          grid-area: 1 / 1 / 3 / 2;
          position: relative;
          width: 40px;
          height: 40px;
          background-color: $body-color;
          border-radius: $border-radius-lg;
          font-size: $h3-font-size;
          font-weight: $font-weight-medium;
          color: $white;

          &::before {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        span {
          grid-area: 1 / 2 / 2 / 3;
          font-size: $font-size-sm;
          line-height: $line-height-sm;
        }

        strong {
          grid-area: 2 / 2 / 3 / 3;
          line-height: $line-height-sm;
          white-space: nowrap;
          overflow: hidden;
          text-overflow: ellipsis;
        }

        &::after {
          grid-area: 1 / 3 / 3 / 4;
          content: "\f327";
          margin-left: 1rem;
          margin-right: 1rem;
          margin-top: 1rem;
        }
      }
    }

    .dropdown-toggle,
    .dropdown-menu {
      min-width: 250px;
    }

    .dropdown-item {
      @extend .py-3;

      &__summary {
        display: grid;
        grid-template-columns: auto 1fr;
        grid-template-rows: auto;
        grid-column-gap: map-get($spacers, 2);
        align-items: center;

        i {
          grid-area: 1 / 1 / 2 / 2;
          position: relative;
          width: 40px;
          height: 40px;
          background-color: $border-color;
          border-radius: $border-radius-lg;
          font-size: $h3-font-size;
          font-weight: $font-weight-medium;
          color: $nuance-05;

          &::before {
            position: absolute;
            top: 50%;
            left: 50%;
            transform: translate(-50%, -50%);
          }
        }

        strong {
          grid-area: 1 / 2 / 2 / 3;
          line-height: $line-height-sm;
        }
      }
    }
  }

  &-nexus {
    max-width: 340px;

    .dropdown-toggle {
      &::before {
        content: "";
        line-height: 1;
        vertical-align: middle;
        margin-right: map-get($spacers, 2);
        width: 20px;
        height: 20px;
        background-image: url("/images/logo-plateforme-inclusion-mono.svg");
        background-position: center center;
        background-repeat: no-repeat;
        background-size: contain;
      }
    }

    .dropdown-menu {
      min-width: 200px;
      max-width: 320px;
    }

    .dropdown-item {
      @extend .py-3;

      &:hover,
      &:focus {
        color: inherit;
      }

      &__profil {
        > span {
          overflow: hidden;
          text-overflow: ellipsis;
          white-space: nowrap;
          display: block;
          line-height: $line-height-sm;
          margin-bottom: map-get($spacers, 2);
        }
      }

      &__service {
        display: flex;
        justify-content: space-between;
        align-items: center;
      }
    }
  }
}

